--- a/src/blocks/header.scss
+++ b/src/blocks/header.scss
@@ -58,7 +58,7 @@
     }
 }
 
-@media screen and (max-width: 1023px){
+@media screen and (max-width: 767px){
     .navigation {
         margin-right: 16px;
     }
